--- a/P5_Senin_Nayla_Cahya_Putri_2C1240068.ipynb
+++ b/P5_Senin_Nayla_Cahya_Putri_2C1240068.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1iWDFLugnot6iQKNih1wLn3En8FA1PRF7",
-      "authorship_tag": "ABX9TyPmNlYhk+6dJnF7dpH0ga3A",
+      "authorship_tag": "ABX9TyOgwJSOxjMHPMgn28rK8XnZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,6 +154,263 @@
           "name": "stdout",
           "text": [
             "Hello world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#proses memasukan data ke dalam variabel\n",
+        "nama = \"John Doe\"\n",
+        "#proses mencetak variabel\n",
+        "print(nama)\n",
+        "#nilai dan tipe data dalam variabel dapat diubah\n",
+        "umur = 20 #nilai awal\n",
+        "print(umur) #mencetak nilai umur\n",
+        "type(umur) #mengecek tipe data umur\n",
+        "umur = \"dua puluh satu\" #nilai setelah diubah\n",
+        "print(umur) #mencetak nilai umur\n",
+        "type(umur) #mengecek tipe data umur\n",
+        "namaDepan = \"Budi\"\n",
+        "namaBelakang = \"Susanto\"\n",
+        "nama = namaDepan + \" \" + namaBelakang\n",
+        "umur = 22\n",
+        "hobi = \"Berenang\"\n",
+        "print(\"Biodata\\n\", nama, \"\\n\", umur, \"\\n\", hobi)\n",
+        "P a g e 12 | 22\n",
+        "#contoh variabel lainya\n",
+        "inivariabel = \"Halo\"\n",
+        "ini_juga_variabel = \"Hai\"\n",
+        "_inivariabeljuga = \"Hi\"\n",
+        "inivariabel222 = \"Bye\"\n",
+        "panjang = 10\n",
+        "lebar = 5\n",
+        "luas = panjang * lebar\n",
+        "print(luas)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "id": "-EgjsZPZKQXa",
+        "outputId": "26da48a8-3623-47d0-a297-90d7d5b9debc"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-11-404e00b30685>, line 18)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-404e00b30685>\"\u001b[0;36m, line \u001b[0;32m18\u001b[0m\n\u001b[0;31m    P a g e 12 | 22\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hello, World!\") # (1)\n",
+        "print(\"Ini program\", end=\"\") # (2)\n",
+        "print(\" pertama saya\") # (3)\n",
+        "print(\"Dengan\", \"Koma\")\n",
+        "# Ini akan menghasilkan luaran \"Dengan Koma\"\n",
+        "print(\"Dengan\" + \" Plus\")\n",
+        "# Ini akan menghasilkan luaran \"DenganPlus\"\n",
+        "# Perhatikan '+' pada print melakukan konkatenasi pada string saja.\n",
+        "variabel = \" sebuah nilai\"\n",
+        "print(f\"Dengan format {variabel}\")\n",
+        "# Ini akan menghasilkan luaran \"Dengan format sebuah nilai\"\n",
+        "# {variabel} akan diubah dengan nilai dari variabel\n",
+        "bersesuaian.\n",
+        "# Ini adalah sebuah komentar.\n",
+        "# Semua yang ada setelah tanda pagar (#) akan diabaikan oleh interpreter.\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "id": "OZFssBDTMwlR",
+        "outputId": "62817ff8-a9e5-4fef-8a51-bbe73e2159dd"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-13-8aa4eadbf857>, line 13)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-8aa4eadbf857>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    bersesuaian.\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#tipe data Boolean\n",
+        "print(True)\n",
+        "#tipe data String\n",
+        "print(\"Ayo belajar Python\")\n",
+        "print(\"Belajar Python Sangat Mudah\")\n",
+        "#tipe data Integer\n",
+        "print(20)\n",
+        "#tipe data Float\n",
+        "print(3.14)\n",
+        "#tipe data Hexadecimal\n",
+        "print(0x9a) # Perbaikan: menambahkan awalan 0x\n",
+        "#tipe data Complex\n",
+        "print(5j)\n",
+        "#tipe data List\n",
+        "print([1,2,3,4,5])\n",
+        "print([\"satu\", \"dua\", \"tiga\"])\n",
+        "#tipe data Tuple\n",
+        "print((1,2,3,4,5))\n",
+        "print((\"satu\", \"dua\", \"tiga\"))\n",
+        "#tipe data Dictionary\n",
+        "print({\"nama\":\"Budi\", \"umur\":20})\n",
+        "#tipe data Dictionary dimasukan ke dalam variabel biodata\n",
+        "biodata = {\"nama\":\"Andi\", \"umur\":21} #proses inisialisasi variabel biodata\n",
+        "print(biodata) #proses pencetakan variabel biodata yang berisi tipe data\n",
+        "Dictionary\n",
+        "print(type(biodata)) #fungsi untuk mengecek jenis tipe data. akan tampil\n",
+        "<class 'dict'> yang berarti dict adalah tipe data dictionary"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "id": "7bJtzB23NcgK",
+        "outputId": "9e1dc27a-5d4f-421a-c7ee-5212aaeb5775"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-12-e33eeaa8512f>, line 27)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-e33eeaa8512f>\"\u001b[0;36m, line \u001b[0;32m27\u001b[0m\n\u001b[0;31m    <class 'dict'> yang berarti dict adalah tipe data dictionary\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Penjumlahan\n",
+        "print(13 + 2)\n",
+        "apel = 7\n",
+        "jeruk = 9\n",
+        "buah = apel + jeruk # Menjumlahkan jumlah apel dan jeruk\n",
+        "print(f\"Jumlah buah: {buah}\")\n",
+        "# Pengurangan\n",
+        "hutang = 10000\n",
+        "bayar = 5000\n",
+        "sisa_hutang = hutang - bayar # Menghitung sisa hutang\n",
+        "print(f\"Sisa hutang Anda adalah {sisa_hutang}\")\n",
+        "# Perkalian\n",
+        "panjang = 15\n",
+        "lebar = 8\n",
+        "luas = panjang * lebar # Menghitung luas persegi panjang\n",
+        "print(f\"Luas persegi panjang: {luas}\")\n",
+        "# Pembagian\n",
+        "kue = 16\n",
+        "anak = 4\n",
+        "kue_per_anak = kue / anak # Menghitung bagian kue per anak\n",
+        "print(f\"Setiap anak akan mendapatkan bagian kue sebanyak {kue_per_anak}\")\n",
+        "# Sisa Bagi / Modulus\n",
+        "bilangan1 = 14\n",
+        "bilangan2 = 5\n",
+        "hasil = bilangan1 % bilangan2 # Menghitung sisa bagi\n",
+        "print(f\"Sisa bagi dari bilangan {bilangan1} dan {bilangan2} adalah\n",
+        "{hasil}\")\n",
+        "# Pangkat\n",
+        "bilangan3 = 8\n",
+        "bilangan4 = 2\n",
+        "hasil_pangkat = bilangan3 ** bilangan4 # Menghitung hasil pangkat\n",
+        "print(f\"Hasil pangkat: {hasil_pangkat}\")\n",
+        "# Pembagian Bulat\n",
+        "print(10 // 3)\n",
+        "# 10 dibagi 3 adalah 3.3333. Karena dibulatkan maka akan menghasilkan\n",
+        "nilai 3"
+      ],
+      "metadata": {
+        "id": "5nu7IUyHOyBi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# SAMA DENGAN\n",
+        "print(1 == 1) # Hasilnya akan bernilai True karena satu sama dengan satu\n",
+        "print(1 == 2) # Hasilnya akan bernilai False karena satu tidak sama dengan\n",
+        "dua\n",
+        "# TIDAK SAMA DENGAN\n",
+        "print(2 != 2) # Hasilnya akan bernilai False karena dua seharusnya sama\n",
+        "dengan dua\n",
+        "print(2 != 3) # Hasilnya akan bernilai True karena dua tidak sama dengan\n",
+        "tiga\n",
+        "P a g e 20 | 22\n",
+        "# LEBIH BESAR DARI\n",
+        "print(5 > 3) # Hasilnya akan bernilai True karena lima lebih besar dari\n",
+        "tiga\n",
+        "# LEBIH KECIL DARI\n",
+        "print(5 < 3) # Hasilnya akan bernilai False karena lima tidak lebih besar\n",
+        "dari tiga\n",
+        "# LEBIH BESAR DARI SAMA DENGAN\n",
+        "print(5 >= 3) # Hasilnya akan bernilai True karena lima lebih besar dari\n",
+        "sama dengan tiga\n",
+        "# LEBIH KECIL DARI SAMA DENGAN\n",
+        "print(5 <= 3) # Hasilnya akan bernilai False karena lima tidak lebih besar\n",
+        "dari sama dengan tiga"
+      ],
+      "metadata": {
+        "id": "q_vxfSsGPHTh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#SOAL 1\n",
+        "s = float(input(\"Masukkan panjang sisi persegi: \"))\n",
+        "luas = s * s\n",
+        "print(Luas_persegi)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 193
+        },
+        "id": "du7KCA36PrbB",
+        "outputId": "38f2d383-0bc4-4b88-80f2-2b010cfbfd89"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Masukkan panjang sisi persegi: 2.5\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'Luas_persegi' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-18-f1e0e590757d>\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Masukkan panjang sisi persegi: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mluas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLuas_persegi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'Luas_persegi' is not defined"
           ]
         }
       ]
