Dibuat menggunakan Colab

--- a/P5_Senin_Nayla_Cahya_Putri_2C1240068.ipynb
+++ b/P5_Senin_Nayla_Cahya_Putri_2C1240068.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1iWDFLugnot6iQKNih1wLn3En8FA1PRF7",
-      "authorship_tag": "ABX9TyOgwJSOxjMHPMgn28rK8XnZ",
+      "authorship_tag": "ABX9TyP2pbICuNjnRsN8FMgH0erb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -77,7 +77,7 @@
         "id": "7TA5gONa2dVP",
         "outputId": "94b4fc4a-87ec-41cd-f4c5-77020d92cdce"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +121,7 @@
         "id": "OHJ69ANV-qHY",
         "outputId": "1a899ec1-2360-4815-fd0d-2ae3de7a9bd2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
         "id": "3CvclM47F1jS",
         "outputId": "0e961c39-a7dd-4d6e-c0c0-f9813fe0eeb3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +178,7 @@
         "umur = 22\n",
         "hobi = \"Berenang\"\n",
         "print(\"Biodata\\n\", nama, \"\\n\", umur, \"\\n\", hobi)\n",
-        "P a g e 12 | 22\n",
+        "\n",
         "#contoh variabel lainya\n",
         "inivariabel = \"Halo\"\n",
         "ini_juga_variabel = \"Hai\"\n",
@@ -190,21 +190,26 @@
         "print(luas)"
       ],
       "metadata": {
+        "id": "j1F2zMSewlzc",
+        "outputId": "fe1572fa-cb04-4c90-d8e4-129dc3157c45",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        },
-        "id": "-EgjsZPZKQXa",
-        "outputId": "26da48a8-3623-47d0-a297-90d7d5b9debc"
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 11,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-11-404e00b30685>, line 18)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-404e00b30685>\"\u001b[0;36m, line \u001b[0;32m18\u001b[0m\n\u001b[0;31m    P a g e 12 | 22\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "John Doe\n",
+            "20\n",
+            "dua puluh satu\n",
+            "Biodata\n",
+            " Budi Susanto \n",
+            " 22 \n",
+            " Berenang\n",
+            "50\n"
           ]
         }
       ]
@@ -212,38 +217,28 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Hello, World!\") # (1)\n",
-        "print(\"Ini program\", end=\"\") # (2)\n",
-        "print(\" pertama saya\") # (3)\n",
-        "print(\"Dengan\", \"Koma\")\n",
-        "# Ini akan menghasilkan luaran \"Dengan Koma\"\n",
-        "print(\"Dengan\" + \" Plus\")\n",
-        "# Ini akan menghasilkan luaran \"DenganPlus\"\n",
-        "# Perhatikan '+' pada print melakukan konkatenasi pada string saja.\n",
-        "variabel = \" sebuah nilai\"\n",
-        "print(f\"Dengan format {variabel}\")\n",
-        "# Ini akan menghasilkan luaran \"Dengan format sebuah nilai\"\n",
-        "# {variabel} akan diubah dengan nilai dari variabel\n",
-        "bersesuaian.\n",
-        "# Ini adalah sebuah komentar.\n",
-        "# Semua yang ada setelah tanda pagar (#) akan diabaikan oleh interpreter.\n"
+        "S = input(\"Masukkan kalimat: \") #(1)\n",
+        "print(\"Anda memasuk kan kalimat: \" + S) #(2)\n",
+        "N = int(input(\"Masukkan sebuah angka: \")) # (3)\n",
+        "print(\"Jika angka Anda ditambah 5, hasilnya: \" + str(N + 5)) #(4)"
       ],
       "metadata": {
+        "id": "shaqRqoEwoMW",
+        "outputId": "3948fae6-09b8-47fd-8473-5f3e14974b9a",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        },
-        "id": "OZFssBDTMwlR",
-        "outputId": "62817ff8-a9e5-4fef-8a51-bbe73e2159dd"
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 13,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-13-8aa4eadbf857>, line 13)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-8aa4eadbf857>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    bersesuaian.\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukkan kalimat: bebas\n",
+            "Anda memasuk kan kalimat: bebas\n",
+            "Masukkan sebuah angka: 5\n",
+            "Jika angka Anda ditambah 5, hasilnya: 10\n"
           ]
         }
       ]
@@ -255,7 +250,7 @@
         "print(True)\n",
         "#tipe data String\n",
         "print(\"Ayo belajar Python\")\n",
-        "print(\"Belajar Python Sangat Mudah\")\n",
+        "print('Belajar Python Sangat Mudah')\n",
         "#tipe data Integer\n",
         "print(20)\n",
         "#tipe data Float\n",
@@ -271,30 +266,168 @@
         "print((1,2,3,4,5))\n",
         "print((\"satu\", \"dua\", \"tiga\"))\n",
         "#tipe data Dictionary\n",
-        "print({\"nama\":\"Budi\", \"umur\":20})\n",
+        "print({\"nama\":\"Budi\", 'umur':20})\n",
         "#tipe data Dictionary dimasukan ke dalam variabel biodata\n",
-        "biodata = {\"nama\":\"Andi\", \"umur\":21} #proses inisialisasi variabel biodata\n",
+        "biodata = {\"nama\":\"Andi\", 'umur':21} #proses inisialisasi variabel biodata\n",
         "print(biodata) #proses pencetakan variabel biodata yang berisi tipe data\n",
-        "Dictionary\n",
-        "print(type(biodata)) #fungsi untuk mengecek jenis tipe data. akan tampil\n",
-        "<class 'dict'> yang berarti dict adalah tipe data dictionary"
+        "\n",
+        "print(type(biodata)) #fungsi untuk mengecek jenis tipe data. akan tampil"
       ],
       "metadata": {
+        "id": "q7sCh-VHw2rU",
+        "outputId": "19c0bea4-7096-42dc-d0fa-8d1c3ae7f3a1",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        },
-        "id": "7bJtzB23NcgK",
-        "outputId": "9e1dc27a-5d4f-421a-c7ee-5212aaeb5775"
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-12-e33eeaa8512f>, line 27)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-e33eeaa8512f>\"\u001b[0;36m, line \u001b[0;32m27\u001b[0m\n\u001b[0;31m    <class 'dict'> yang berarti dict adalah tipe data dictionary\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "Ayo belajar Python\n",
+            "Belajar Python Sangat Mudah\n",
+            "20\n",
+            "3.14\n",
+            "154\n",
+            "5j\n",
+            "[1, 2, 3, 4, 5]\n",
+            "['satu', 'dua', 'tiga']\n",
+            "(1, 2, 3, 4, 5)\n",
+            "('satu', 'dua', 'tiga')\n",
+            "{'nama': 'Budi', 'umur': 20}\n",
+            "{'nama': 'Andi', 'umur': 21}\n",
+            "<class 'dict'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = float(5)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "i86GVE1aw_Mj",
+        "outputId": "ddf3cbdd-ceb0-4b94-a960-3f9b73516117",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = int(5.6)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "wpEtrcr_xCzv",
+        "outputId": "ff0b19b5-3ba8-41f9-9458-793ae89381d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = str(9)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "3qw3ULqYxF_7",
+        "outputId": "b2d159de-685a-4957-dff4-7571f921e191",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = set([1, 2, 3])\n",
+        "y = tuple({5, 6, 7})\n",
+        "z = list((\"hello\"))\n",
+        "print(x)\n",
+        "print(y)\n",
+        "print(z)"
+      ],
+      "metadata": {
+        "id": "w0A-7yonxJYm",
+        "outputId": "6bce46a8-a452-4e2b-b876-8c4b1341f429",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3}\n",
+            "(5, 6, 7)\n",
+            "['h', 'e', 'l', 'l', 'o']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 8\n",
+        "y = 2\n",
+        "result = x + y\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "id": "1mc7v_doxMKh",
+        "outputId": "41cf1a54-5a64-4d8f-fbb0-afbb2079d810",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n"
           ]
         }
       ]
@@ -327,8 +460,7 @@
         "bilangan1 = 14\n",
         "bilangan2 = 5\n",
         "hasil = bilangan1 % bilangan2 # Menghitung sisa bagi\n",
-        "print(f\"Sisa bagi dari bilangan {bilangan1} dan {bilangan2} adalah\n",
-        "{hasil}\")\n",
+        "\n",
         "# Pangkat\n",
         "bilangan3 = 8\n",
         "bilangan4 = 2\n",
@@ -336,14 +468,31 @@
         "print(f\"Hasil pangkat: {hasil_pangkat}\")\n",
         "# Pembagian Bulat\n",
         "print(10 // 3)\n",
-        "# 10 dibagi 3 adalah 3.3333. Karena dibulatkan maka akan menghasilkan\n",
-        "nilai 3"
+        "# 10 dibagi 3 adalah 3.3333. Karena dibulatkan maka akan menghasilkan"
       ],
       "metadata": {
-        "id": "5nu7IUyHOyBi"
+        "id": "_7SLD7cLxOjC",
+        "outputId": "c29b7404-63de-4090-fd6e-c268b73832a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n",
+            "Jumlah buah: 16\n",
+            "Sisa hutang Anda adalah 5000\n",
+            "Luas persegi panjang: 120\n",
+            "Setiap anak akan mendapatkan bagian kue sebanyak 4.0\n",
+            "Hasil pangkat: 64\n",
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -351,66 +500,73 @@
         "# SAMA DENGAN\n",
         "print(1 == 1) # Hasilnya akan bernilai True karena satu sama dengan satu\n",
         "print(1 == 2) # Hasilnya akan bernilai False karena satu tidak sama dengan\n",
-        "dua\n",
+        "\n",
         "# TIDAK SAMA DENGAN\n",
         "print(2 != 2) # Hasilnya akan bernilai False karena dua seharusnya sama\n",
-        "dengan dua\n",
+        "\n",
         "print(2 != 3) # Hasilnya akan bernilai True karena dua tidak sama dengan\n",
-        "tiga\n",
-        "P a g e 20 | 22\n",
+        "\n",
+        "\n",
         "# LEBIH BESAR DARI\n",
         "print(5 > 3) # Hasilnya akan bernilai True karena lima lebih besar dari\n",
-        "tiga\n",
+        "\n",
         "# LEBIH KECIL DARI\n",
         "print(5 < 3) # Hasilnya akan bernilai False karena lima tidak lebih besar\n",
-        "dari tiga\n",
+        "\n",
         "# LEBIH BESAR DARI SAMA DENGAN\n",
         "print(5 >= 3) # Hasilnya akan bernilai True karena lima lebih besar dari\n",
-        "sama dengan tiga\n",
+        "\n",
         "# LEBIH KECIL DARI SAMA DENGAN\n",
-        "print(5 <= 3) # Hasilnya akan bernilai False karena lima tidak lebih besar\n",
-        "dari sama dengan tiga"
+        "print(5 <= 3) # Hasilnya akan bernilai False karena lima tidak lebih besar"
       ],
       "metadata": {
-        "id": "q_vxfSsGPHTh"
+        "id": "RrbjgR5ZxT5k",
+        "outputId": "672cd693-e5e0-40ea-fb35-c1abeaaa27b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n",
+            "False\n",
+            "True\n",
+            "True\n",
+            "False\n",
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "#SOAL 1\n",
-        "s = float(input(\"Masukkan panjang sisi persegi: \"))\n",
-        "luas = s * s\n",
-        "print(Luas_persegi)"
+        "s = float(input(\"Masukkan panjang sisi persegi:\"))\n",
+        "luas_persegi = s * s\n",
+        "print(\"jadi luas persegi adalah\",luas_persegi)"
       ],
       "metadata": {
+        "id": "q3KJzWsCxZm4",
+        "outputId": "257b48f3-c5fa-42b2-b347-0755fca5f353",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 193
-        },
-        "id": "du7KCA36PrbB",
-        "outputId": "38f2d383-0bc4-4b88-80f2-2b010cfbfd89"
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 18,
+      "execution_count": 12,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Masukkan panjang sisi persegi: 2.5\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'Luas_persegi' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-18-f1e0e590757d>\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Masukkan panjang sisi persegi: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mluas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLuas_persegi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'Luas_persegi' is not defined"
+            "Masukkan panjang sisi persegi:2.6\n",
+            "jadi luas persegi adalah 6.760000000000001\n"
           ]
         }
       ]
