--- a/P5_Senin_Nayla_Cahya_Putri_2C1240068.ipynb
+++ b/P5_Senin_Nayla_Cahya_Putri_2C1240068.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1iWDFLugnot6iQKNih1wLn3En8FA1PRF7",
-      "authorship_tag": "ABX9TyP2pbICuNjnRsN8FMgH0erb",
+      "authorship_tag": "ABX9TyN5PcTOvnr+KeIwjh/DEnLq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -196,7 +196,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +229,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +280,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,7 +317,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,7 +341,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,7 +365,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,7 +393,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +421,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +477,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,7 +526,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -559,7 +559,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,6 +567,51 @@
           "text": [
             "Masukkan panjang sisi persegi:2.6\n",
             "jadi luas persegi adalah 6.760000000000001\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#Soal 2\n",
+        "nama = str (input (\"masukkan nama : \"))\n",
+        "nim = str (input(\"masukkan nim : \"))\n",
+        "fakultas = str (input(\"masukkan fakultas : \"))\n",
+        "jurusan = str (input(\"masukkan jurusan : \"))\n",
+        "KotaAsal = str (input(\"masukkan Kota Asal : \"))\n",
+        "Alamat = str (input(\"masukkan Alamat : \"))\n",
+        "print(nama)\n",
+        "print(nim)\n",
+        "print(fakultas)\n",
+        "print(jurusan)\n",
+        "print(KotaAsal)"
+      ],
+      "metadata": {
+        "id": "BqY21Q6vyUYP",
+        "outputId": "3cf32099-c0df-4085-dc71-52c72a6103b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "masukkan nama : Nayla Cahya Putri \n",
+            "masukkan nim : 2C1240068 \n",
+            "masukkan fakultas : Sains dan Teknologi \n",
+            "masukkan jurusan : Agribisnis\n",
+            "masukkan Kota Asal : Kepulauan Bangka Belitung \n",
+            "masukkan Alamat : Bangka Belitung \n",
+            "Nayla Cahya Putri \n",
+            "2C1240068 \n",
+            "Sains dan Teknologi \n",
+            "Agribisnis\n",
+            "Kepulauan Bangka Belitung \n"
           ]
         }
       ]
